@startuml
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor LightYellow
  BorderColor DarkOrange
}

enum UserRole {
  CUSTOMER
  KITCHEN
  ADMIN
}

enum OrderStatus {
  PENDING
  PAID
  IN_KITCHEN
  READY
  COMPLETED
  CANCELLED
}

class User {
  - user_id: String
  - username: String
  - password: String
  - role: UserRole
}

class MenuItem {
  - menu_id: String
  - name: String
  - price: Double
  - category: String
  - is_available: Boolean
}

class OrderItem {
  - menu_item: MenuItem
  - quantity: Integer
  - special_notes: String
  + subtotal(): Double
}

class Order {
  - order_id: String
  - table_number: String
  - customer_id: String
  - order_time: LocalDateTime
  - status: OrderStatus
  - items: List<OrderItem>
  - total_amount: Double
  + add_item(item: OrderItem)
  + calculate_total(): Double
  + pay(): Boolean
}

class PromoCode {
  - code: String
  - discount_type: String
  - value: Double
  - min_order: Double
  + is_valid(order_total: Double): Boolean
}

' --- Relasi ---
User "1" -- "0..*" Order : places >
Order "1" -- "1..*" OrderItem : contains >
OrderItem "1" -- "1" MenuItem : refers to >
Order "0..1" -- "0..1" PromoCode : uses >

note top of Order
  Setelah order.pay(),
  status langsung diubah
  menjadi IN_KITCHEN
  di source code.
end note
@enduml